# clipipe

cli/: README.md  clipipe.py  pyproject.toml
server/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  rsync-exclude.txt  server.py  storage_backend.py
server/static/: index.html
